[package]
name = "scry_sim"
version = "0.0.0"
edition = "2021"

[dependencies]
scry_isa = { path = "../scry_isa" }
scry_asm = { path = "../scry_asm" }
num-traits = "0.2.14"
bitvec = "1.0.0"
byteorder = "1.4.3"
quickcheck = "1.0.3"
duplicate = "0.4.0"

[dev-dependencies]
quickcheck_macros = "1.0.0"
delegate = "0.8.0"


