[package]
name = "scry_sim"
version = "0.0.0"
edition = "2021"

[dependencies]
scry_isa = { path = "../scry_isa" }
scry_asm = { path = "../scry_asm" }
num-traits = "0.2.14"
bitvec = "1.0.0"
byteorder = "1.4.3"
quickcheck = "1.0.3"
duplicate = { version = "2.0.0", default-features = false }
paste = "1.0.11"
delegate = "0.13.0"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27.1"

[dev-dependencies]
quickcheck_macros = "1.0.0"


